# lucky-money-account.github.io

./: README.md  index.html
projects/Intelligent-object-recognition/: .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt  run.bat
projects/Intelligent-object-recognition/backend/: app.py  config.py  models.py  train_digits.py
projects/Intelligent-object-recognition/frontend/: index.html
projects/Intelligent-object-recognition/frontend/css/: style.css
projects/Intelligent-object-recognition/frontend/js/: app.js
