[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.build_backend"

[project]
name = "objrec"
version = "1.0.0"
description = "基于深度学习的多模式智能对象识别系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "tensorflow>=2.16",
    "torch>=2.0",
    "torchvision>=0.15",
    "ultralytics>=8.0",
    "opencv-python>=4.6",
    "pillow>=10.0",
    "numpy>=1.26",
    "werkzeug>=3.0",
]

[project.scripts]
objrec = "__main__:main"

[tool.setuptools.packages.find]
include = ["backend*"]
